# WATTY

./: .gitignore  CHANGELOG.md  CLI-SETUP.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  SECURITY.md  SYSTEM_PROMPTS.md  claude-cli-config.json  install-watty.bat  install-watty.sh  llms.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Scripts/: setup.sh  test.sh
Watty.xcodeproj/: project.pbxproj
Watty.xcodeproj/xcshareddata/xcschemes/: WattyApp.xcscheme
WattyApp/: Entitlements.plist  Info.plist  WattyApp.swift
WattyApp/Resources/: DefaultSchedule.json
WattyApp/Resources/DesignSystem/: AppleDecisionEngine.swift  AppleLevelUX.swift
WattyApp/Setup/: OnboardingView.swift
WattyCore/Sources/Embedding/: Embedder.swift  SimilaritySearch.swift
WattyCore/Sources/Ingestion/: CalendarIngestor.swift  ContactsIngestor.swift  IngestorProtocol.swift  MailIngestor.swift  MessageIngestor.swift  NotesIngestor.swift  RemindersIngestor.swift
WattyCore/Sources/Intelligence/: BriefGenerator.swift  CommitmentExtractor.swift  RecallEngine.swift  TextFormatter.swift
WattyCore/Sources/Models/: Cluster.swift  Commitment.swift  ContactProfile.swift  DailyBrief.swift  Memory.swift
WattyCore/Sources/Scheduling/: BriefScheduler.swift  NudgeScheduler.swift
WattyCore/Sources/Storage/: EmbeddingIndex.swift  KeychainManager.swift  MemoryStore.swift
WattyCore/Tests/: BriefGeneratorTests.swift  CommitmentExtractorTests.swift  EmbedderTests.swift  MemoryStoreTests.swift  RecallEngineTests.swift
WattyIntents/Sources/: AppShortcutsProvider.swift  BriefIntent.swift  CommitmentsIntent.swift  RecallIntent.swift
WattyMCP/Sources/: MCPServer.swift
WattyMCP/Sources/Tools/: MCPError.swift  WattyBrief.swift  WattyCalendarPrep.swift  WattyClusters.swift  WattyCommitments.swift  WattyContactContext.swift  WattyRecall.swift  WattyStore.swift
WattyMCP/Sources/Transport/: StdioTransport.swift
WattyMCP/Tests/: MCPServerTests.swift
tests/: bench.py  test_backup.py  test_brain.py  test_cli.py  test_error_boundaries.py  test_http.py  test_importers.py  test_logging.py  test_migrations.py  test_performance.py
trinity/: .env.example  .gitignore  package-lock.json  package.json
trinity/client/: index.html  vite.config.js
trinity/client/src/: App.jsx
trinity/client/src/components/: ApprovalCard.jsx  DirectiveCard.jsx  MemoryPanel.jsx  MessageBubble.jsx  SelfModNotification.jsx  SessionCrystal.jsx  SkillCard.jsx
trinity/client/src/pages/: Approvals.jsx  Chat.jsx  Dashboard.jsx  Sessions.jsx  Settings.jsx
trinity/client/src/utils/: api.js
trinity/server/: ai.js  db.js  governance.js  index.js  parser.js  prompt-builder.js
trinity/server/routes/: chat.js  directives.js  memories.js  pending.js  sessions.js  settings.js  skills.js  state.js
watty/: Modelfile  __init__.py  __main__.py  a2a.py  backup.py  brain.py  brain_explorer.html  chat.py  chestahedron.py  cli.py  cognition.py  compressor.py  config.py  crypto.py  daemon.py  desire.py  discovery.py  doctor.py  embedding_queue.py  embeddings.py  embeddings_loader.py  embeddings_onnx.py  evaluation.py  knowledge_graph.py  log.py  mentor.py  metabolism.py  migrations.py  navigator.py  reflection.py  runtime.py  server.py  server_http.py  server_remote.py  snapshots.py  tools.py  tools_a2a.py  tools_agent.py  tools_comms.py  tools_daemon.py  (+15 more)
watty/importers/: chatgpt.py  claude.py  generic.py
watty/training/: extract_data.py  train_all.py
watty/training/data/: phase2_logic.jsonl  phase3_rhetoric.jsonl  phase4_sophia.jsonl
