[build-system]
requires = ["setuptools>=68.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watty-ai"
version = "1.1.0"
description = "One memory. Every AI. It just knows you."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hugo Bulliard"},
]
keywords = ["mcp", "memory", "ai", "llm", "semantic-search", "claude", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/hugoboss23-5/WATTY"
Repository = "https://github.com/hugoboss23-5/WATTY"
Issues = "https://github.com/hugoboss23-5/WATTY/issues"

[project.scripts]
watty = "watty.server:run"
watty-import-chatgpt = "watty.importers.chatgpt:main"
watty-import-claude = "watty.importers.claude:main"
watty-import-json = "watty.importers.generic:main"
watty-http = "watty.server_http:run"

[project.optional-dependencies]
http = ["aiohttp>=3.9.0"]
onnx = ["optimum[onnxruntime]>=1.16.0", "onnxruntime>=1.16.0"]
torch = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
full = ["sentence-transformers>=2.2.0", "torch>=2.0.0", "optimum[onnxruntime]>=1.16.0", "onnxruntime>=1.16.0", "aiohttp>=3.9.0"]
dev = ["pytest>=7.0", "aiohttp>=3.9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["watty*"]
