[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watty"
version = "2.3.0"
description = "Your brain's external hard drive. Scans your life, remembers everything, surfaces what matters."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hugo & Rim"},
]

dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.28.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "cryptography>=42.0.0",
    "anthropic>=0.40.0",
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "SpeechRecognition>=3.10.0",
]

[project.optional-dependencies]
light = [
    "mcp>=1.0.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]
remote = [
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "sounddevice>=0.4.6",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
watty = "watty.cli:main"
watty-runtime = "watty.runtime:main"

[tool.setuptools.packages.find]
include = ["watty*"]
